@@ -1,4 +1,15 @@
 
+2006-09-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src: control.h, gnome_ui.c, main.c: wake up sleeping capture
+		thread when hitting stop
+	* src: app_data.c, app_data.h, gnome_ui.c, gnome_options.c: fix
+		command execution (animate etc.) to handle floating point
+		values for time_pre_frame, needed for fps < 1
+
+2006-09-05  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src/gnome_ui.c: fix results dialog's calculation of actual
+		frame rates for fps < 1
+
 2006-09-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src: gnome_options.c, app_data.c: fix for bug # 1551021
 	* src/main.c, man/xvidcap.1: updated usage and man page
